--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -14,7 +14,8 @@
 }
 .highlighted-text{
     font-size: 1.5em;
-    color: #F57F17;
+    color: #4ebe5e;
+    /*color: #F57F17;*/
 }
 .profile-details-role{
     margin: 14px 0 24px 0;
