--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ body ::-webkit-scrollbar-thumb {
 
 .primary-btn:hover {
   color: aliceblue;
-  border: 2px solid #ff5823;
+  border: 2px solid #96e6a1;
   background-color: #1f2235;
 }
 
@@ -67,7 +67,7 @@ body ::-webkit-scrollbar-thumb {
   color: var(--white);
 
   font-size: 12px;
-  background-color: #ff5823;
+  background-color: #4ebe5e;
 }
 @media only screen and (max-width: 568px) {
   .highlighted-btn {
