--- a/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/src/utilities/ScreenHeading/ScreenHeading.css
@@ -46,7 +46,8 @@
     position: absolute;
     top: 4px;
     border-radius: 10px;
-    background-color: #ff5823;
+    background-color: #4ebe5e;
+    /*background-color: #ff5823;*/
 }
 
 @media screen and (max-width: 810px){
