--- a/src/PortfolioContainer/Home/Header/Header.css
+++ b/src/PortfolioContainer/Home/Header/Header.css
@@ -13,6 +13,10 @@
     color: white;
 }
 .header-logo{
+    font-family: Ink Free;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
     font-size: 50px;
     color: white;
 }
@@ -35,7 +39,8 @@
     color: white;
 }
 .selected-header-option{
-    color: #F57F17;
+    color: #96e6a1;
+    /*color: #F57F17;*/
 }
 @media only screen and (max-width: 1110px) {
     .header-parent{
