--- a/src/PortfolioContainer/AboutMe/AboutMe.css
+++ b/src/PortfolioContainer/AboutMe/AboutMe.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     margin: 50px 0 0 0;
+    min-height: 100vh;
 }
 .about-me-parent{
     max-width: 1000px;
