--- a/src/PortfolioContainer/Resume/Resume.css
+++ b/src/PortfolioContainer/Resume/Resume.css
@@ -1,5 +1,6 @@
 .resume-container{
     /*min-height: 100vh;*/
+    /*margin-top: 50px;*/
 }
 .resume-container-form{
     max-width: 1100px;
@@ -10,4 +11,13 @@
     flex-direction: row;
     justify-content: space-evenly;
     box-shadow: 0 0 20px -2px #1f2235;
+}
+@media only screen and (max-width: 750px) {
+   .resume-container-form{
+       flex-direction: column;
+       align-items: center;
+   }
+    .resume-container{
+        margin-top: 50px;
+    }
 }
